<resources>
    <string name="app_name">Project0</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="bigger">BUILD IT BIGGER</string>
    <string name="xyz">XYZ READER</string>
    <string name="capstone">CAPSTONE</string>
</resources>
