<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:columnCount="4"
        android:rowCount="6"
        style="@style/AlertDialog.AppCompat.Light"
        android:layout_centerInParent="true"
        android:rowOrderPreserved="false"
    android:useDefaultMargins="true">

    <Space
        android:layout_width="50dp"
        android:layout_height="87dp"
        android:layout_rowSpan="2" />

    <TextView android:text="@string/title" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:textSize="25sp"
        android:textColor="#F08C35" />
    <Space
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_rowSpan="2"
        android:layout_column="0"
        android:layout_row="1"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:id="@+id/spotify_btn"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:textSize="14sp"
            android:background="#81D4FA"
            android:textColor="#000000"
            android:onClick="openSpotify"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:id="@+id/scores_btn"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:layout_gravity="fill"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:textSize="14sp"
            android:background="#4FC3F7"
            android:textColor="#000000"
            android:onClick="openScores"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/capstone_btn"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:background="#0288D1"
            android:onClick="openCapstone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xyz"
            android:id="@+id/xyz_btn"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:background="#039BE5"
            android:onClick="openXYZ"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:id="@+id/library_btn"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:background="#29B6F6"
            android:onClick="openLibrary"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bigger"
            android:id="@+id/bigger_btn"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:background="#03A9F4"
            android:onClick="openBigger"/>

    </GridLayout>
